# models/books.js
@@ -1,0 +1,11 @@
+const mongoose = require('mongoose');
+
+const bookSchema = new mongoose.Schema({
+  title: { type: String, required: true },
+  author: { type: String, required: true },
+  genre: { type: String, required: true },
+  publishedDate: { type: Date, required: true },
+  isbn: { type: String, required: true },
+});
+
+module.exports = mongoose.model('Book', bookSchema);
