# routes/app.js
@@ -6,7 +6,7 @@ const swaggerDocument = require('../swagger.json');
 router.use('/api-docs', swaggerUi.serve);
 router.get('/api-docs', swaggerUi.setup(swaggerDocument));
 
-router.use('/contacts', require('./contacts'));
+router.use('/books', require('./books'));
 
 router.get('/', (req, res) => {
     res.send('Israel Brown');
